--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@types/react-big-calendar": "^1.16.1",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.41.0",
     "moment": "^2.30.1",
+    "mysql2": "^3.14.0",
     "next": "14.2.26",
     "react": "^18",
     "react-big-calendar": "^1.18.0",
@@ -25,8 +28,10 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "drizzle-kit": "^0.30.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.19.3",
     "typescript": "^5"
   }
 }
