--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "db:push": "npx drizzle-kit push",
     "db:pull": "npx drizzle-kit pull",
     "db:migrate": "npx drizzle-kit migrate",
-    "db:studio": "npx drizzle-kit studio"
+    "db:studio": "npx drizzle-kit studio",
+    "seed": "tsx scripts/seed.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -36,6 +37,7 @@
     "drizzle-kit": "^0.30.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "^5"
   }
