change from drizzle to prisma

--- a/.env
+++ b/.env
@@ -1,5 +1,11 @@
+# DB_HOST = localhost
+# DB_USER = root
+# DB_PASSWORD = jakin
+# DB_NAME = schoolmanagement 
+# DB_PORT = 3306
 DB_HOST = localhost
 DB_USER = root
 DB_PASSWORD = jakin
 DB_NAME = schoolmanagement 
 DB_PORT = 3306
+DATABASE_URL="mysql://root:jakin@localhost:3306/schoolmanagement"
