--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "seed": "tsx scripts/seed.ts"
   },
   "dependencies": {
+    "@clerk/elements": "^0.23.21",
+    "@clerk/nextjs": "^6.18.4",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.6.0",
     "@types/react-big-calendar": "^1.16.1",
