add new teacher

--- a/.env
+++ b/.env
@@ -13,3 +13,5 @@ DATABASE_URL="mysql://root:jakin@localhost:3306/schoolmanagement"
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_b3B0aW1hbC1tb29zZS03OC5jbGVyay5hY2NvdW50cy5kZXYk
 CLERK_SECRET_KEY=sk_test_ns7zab4YeCAgN7XYTXoGJt6zugjgi9vAbiJntJljxV
 NEXT_PUBLIC_CLERK_SIGN_IN_URL= /
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dzhwo82c6
+NEXT_PUBLIC_CLOUDINARY_CLOUD_API_KEY=833511591113455
