--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.30.1",
     "mysql2": "^3.14.0",
     "next": "14.2.26",
+    "next-cloudinary": "^6.16.0",
     "react": "^18",
     "react-big-calendar": "^1.18.0",
     "react-calendar": "^5.1.0",
