fix clerk auth issues and test betterAuth  system

--- a/.env
+++ b/.env
@@ -15,3 +15,7 @@ CLERK_SECRET_KEY=sk_test_ns7zab4YeCAgN7XYTXoGJt6zugjgi9vAbiJntJljxV
 NEXT_PUBLIC_CLERK_SIGN_IN_URL= /
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dzhwo82c6
 NEXT_PUBLIC_CLOUDINARY_CLOUD_API_KEY=833511591113455
+
+# Better auth
+BETTER_AUTH_SECRET=4DkeRgyns5eP7FlkHsEf3LNZUNksYrtg
+BETTER_AUTH_URL=http://localhost:3000 
