--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "db:push": "npx prisma db push",
     "seed": "tsx scripts/seed.ts"
   },
+  "prisma": {
+    "seed": "tsx scripts/seed.ts"
+  },
   "dependencies": {
     "@clerk/elements": "^0.23.21",
     "@clerk/nextjs": "^6.18.4",
@@ -40,6 +43,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dotenv-cli": "^10.0.0",
     "postcss": "^8",
     "prisma": "^6.6.0",
     "tailwindcss": "^3.4.1",
